--- a/port.html
+++ b/port.html
@@ -3,7 +3,7 @@ File: port.html
 Created: Thursday, 24th July 2025 2:47:35 pm
 Author: Md.Rahad (mdrahad1296@gmail.com)
 -----
-Last Modified: Thursday, 24th July 2025 2:49:09 pm
+Last Modified: Thursday, 24th July 2025 8:54:19 pm
 Modified By: Md.Rahad (mdrahad1296@gmail.com)
 -----
 Copyright (c) 2025 Islamic University
@@ -14,9 +14,105 @@ Copyright (c) 2025 Islamic University
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="portstyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <title>Portfolio</title>
 </head>
-<body>
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">Ma<span class="r-color">r</span>y</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <nav class="banner">
+            <div class="banner-content">
+                <h4 class="banner-welcome">Hi I Am</h4>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
+                    <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
+            </div>
+            <div>
+                <img src="hardy.png" alt="Man Picture">
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="about secondary-bg">
+            <div class="bg-wh">
+                <h3 class="section-title">About Me</h3>
+                <p class="about-item">I, m a designer & developer with a passion for web design. I enjoy developing
+                    simple, clean and slick
+                    websites that provide real value to the end user. Thousands of clients have procured exceptional
+                    resulfs
+                    while working with me. Delivering work within time and budget which meets clients requirements in
+                    our
+                    mata.</p>
+                <div class="about-items">
 
+                    <!--about-item*4>p.item-title+p.item-description-->
+                    <div class="about-item">
+                        <p class="item-title">Name:</p>
+                        <p class="item-description">Mary Hardy</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="item-title">Email:</p>
+                        <p class="item-description">abc@gmail.com</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="item-title">Date of Birth:</p>
+                        <p class="item-description">Dec 16, 2000</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="item-title">From:</p>
+                        <p class="item-description">Dhaka,BD</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--NEW SECTION OF I DO-->
+        <section class="skills">
+            <h3 class="section-title text-center">What I Do</h3>
+            <p class="section-description text-center">I have more than 10 years experience building software for clients all over
+                the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                find out more about my experience? Check out my online resume and project portfolio.</p>
+                <div class="skills-container"><div class="skill">
+                    <img src="icons/js.png" alt="Picture OF Javascript">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="icons/react.png" alt="Picture of React">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="icons/nodejs.png " alt="logo of nodejs">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="icons/mongo.png" alt="logo of mongo db">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div></div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
