--- a/port.html
+++ b/port.html
@@ -3,13 +3,14 @@ File: port.html
 Created: Thursday, 24th July 2025 2:47:35 pm
 Author: Md.Rahad (mdrahad1296@gmail.com)
 -----
-Last Modified: Thursday, 24th July 2025 8:54:19 pm
+Last Modified: Friday, 25th July 2025 2:25:47 am
 Modified By: Md.Rahad (mdrahad1296@gmail.com)
 -----
 Copyright (c) 2025 Islamic University
 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,9 +20,10 @@ Copyright (c) 2025 Islamic University
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <title>Portfolio</title>
 </head>
+
 <body class="open-sans-normal">
     <header class="header">
         <nav>
@@ -38,8 +40,8 @@ Copyright (c) 2025 Islamic University
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
-                    <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
-                    <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div>
                 <img src="hardy.png" alt="Man Picture">
@@ -82,10 +84,12 @@ Copyright (c) 2025 Islamic University
         <!--NEW SECTION OF I DO-->
         <section class="skills">
             <h3 class="section-title text-center">What I Do</h3>
-            <p class="section-description text-center">I have more than 10 years experience building software for clients all over
+            <p class="section-description text-center">I have more than 10 years experience building software for
+                clients all over
                 the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
                 find out more about my experience? Check out my online resume and project portfolio.</p>
-                <div class="skills-container"><div class="skill">
+            <div class="skills-container">
+                <div class="skill">
                     <img src="icons/js.png" alt="Picture OF Javascript">
                     <h4 class="skill-title">Vanilla JavaScript</h4>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of
@@ -108,11 +112,92 @@ Copyright (c) 2025 Islamic University
                     <h4 class="skill-title">MongoDB</h4>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of
                         the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div></div>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
+            <h3 class="section-title text-center">A summary of my Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-desscription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-desscription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-desscription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-desscription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                        <div class="experience-desscription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">HTML Developer</h4>
+                        <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+                        <div class="experience-desscription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center button-margin">
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+            </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                Monday through
+                Friday.</p>
+            <div class="img-style">
+                <a href=""><img src="icons/facebook.png" alt="facebook"></a>
+                <a href=""><img src="icons/twitter.png" alt="facebook"></a>
+                <a href=""><img src="icons/insta.png" alt="facebook"></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Lets Inbox Me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="text" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Massage"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
+
 </html>
